# mirage-defect

./: .devcontainer.json  .gitignore  Dockerfile  README.md  docker-compose.yml  poetry.toml  pyproject.toml
mirage_defect/: __init__.py  grounded_sam.py  logger.py  nsa_generator.py
mirage_defect/mask_generator/: __init__.py  base.py  groundend_sam_generator.py  uniform_generator.py
scripts/: generate.py  generate_mvtec.py  inference.py
